# Road-Accident-Risk-Prediction

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  clone-and-install  pyproject.toml  ruff.toml
docs/: dictionnaire_des_variables.csv
hooks/: post-commit  pre-commit  pre-push
notebooks/: cleaning_notebook.ipynb  create_dataset.ipynb
src/prediction_profils_accidents_graves/: create_dataset.py
tests/: test_create_dataset.py
